5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1638_2730.log
== TEST (2019-04-16 02:44:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (X>0):
	quadrante = superiores
else:
	quandrante = inferiores
if (y>0):
	quadrante = superiores
else:
	quadrante  = inferiores

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X>0):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:44:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (X>0):
	quadrante = superiores
else:
	quandrante = inferiores
if (y>0):
	quadrante = superiores
else:
	quadrante  = inferiores
print (quadrante)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X>0):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:44:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (x>0):
	quadrante = superiores
else:
	quandrante = inferiores
if (y>0):
	quadrante = superiores
else:
	quadrante  = inferiores
print (quadrante)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    quadrante = superiores
NameError: name 'superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:45:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (x>0):
	quadrante = "superiores"
else:
	quadrante = "inferiores"
if (y>0):
	quadrante = "superiores"
else:
	quadrante  = "inferiores"
print (quadrante)	

-- OUTPUT:
inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 02:46:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (x>0):
	quadrante = "superiores"
else:
	quadrante = "inferiores"
if (y>0):
	quadrante = "superiores"
else:
	quadrante = "inferiores"
print (quadrante)	

-- EXECUTION TIME:
0.164375
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0):
	quadrante = "superiores"
else:
	quadrante = "inferiores"
print (quadrante)	

-- OUTPUT:
inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0 and x>0):
	quadrante = "superiores"
else:
	quadrante = "inferiores"
print (quadrante)	

-- OUTPUT:
inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0 and x>0):
	quadrante = "superiores"
else:
	quadrante = "inferiores"
print (quadrante)	

-- OUTPUT:
inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0 and x>0):
	quadrante = "Superiores"
else:
	quadrante = "Inferiores"
print (quadrante)	

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0 and x>0):
	quadrante = "Superiores"
else:
	quadrante = "Inferiores"
print (quadrante)	

-- EXECUTION TIME:
0.206884
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0):
	quadrante = "Superiores"
else:
	quadrante = "Inferiores"
print (quadrante)	

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite um numero da coordenada x:"))
y = float(input("Digite um numero da coordenada y:"))
if (y>0):
	quadrante = "Superiores"
else:
	quadrante = "Inferiores"
print (quadrante)	

-- EXECUTION TIME:
0.199816
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
